# grid-world

./: .gitignore  AGENTS.md  README.md  pyproject.toml
src/grid_world/: __init__.py  artifacts.py  benchmark.py  cli.py  config.py  data.py  env.py  evaluate.py  models.py  train_controller.py  train_world_model.py  utils.py  web.py
src/grid_world/static/: app.js  index.html  styles.css
tests/: test_artifacts.py  test_benchmark.py  test_data.py  test_env.py  test_evaluate.py  test_models.py
