[project]
name = "imagination-gridworld"
version = "0.1.0"
description = "Beginner world-model gridworld with imagined DQN control."
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "fastapi>=0.111.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0,<2.0.0",
    "torch>=2.2.0,<2.3.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
]

[project.scripts]
collect-data = "grid_world.cli:collect_data_main"
train-world-model = "grid_world.cli:train_world_model_main"
train-controller = "grid_world.cli:train_controller_main"
evaluate = "grid_world.cli:evaluate_main"
serve = "grid_world.web:serve_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/grid_world"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
